--- a/css/styles.css
+++ b/css/styles.css
@@ -3,52 +3,79 @@ body, html{
     margin:0;
     height: 100%;
     width: 100%;
-    background-color: #000;
+    background-color: #FFCF99;
+
+    
 }
+
+/* Logo name with drop shadow */
+
+.name-drop-shadow {     
+    position: relative;   
+    float: right;   
+    top: 20px;
+    right:120px;
+    margin: 0;
+    font-size:5vw;
+    font-family: 'Montserrat', sans-serif;   
+    text-align:center;   
+    letter-spacing: -1px;   
+    color:#fff;   
+    text-shadow: 
+    /*  shadow around the text    */     
+    -1px 0 #000, 0 1px #000, 1px 0 #000, 0 -1px #000,  
+
+    /*  drop shadow   */         
+    1px 1px #000,2px 2px #000,3px 3px #000,4px 4px #000,5px 5px #000,6px 6px #000,7px
+    7px #000,8px 8px #000,9px 9px #000,10px 10px #000
+}
+
 
 
 /*Navigation Bar*/
 .fixed-bar {
   position: fixed;
   top: 0;
-  left: 0;
+  right: 0;
   z-index: 9999;
   width: 100%;
   height: 100px;
-  background-color: #fff;
-  border-bottom: 4px solid #000;
+  background-color: #FFCF99;
+
 }
 
-/* Dropdown Button */
+/* Dropdown Button - circle */
 .dropbtn {
-    background-color: #fff;
+    
+    background-color: #B80C09;
     color: #000;
-    padding: 16px;
-    font-size: 30px;
-    border-top: none;
-    border-right:4px solid #000;
-    border-bottom: none;
-    border-left: none;
     cursor: pointer;
-    width: 100px;
-    height:100px;
+    border-radius: 50%;
+    border: 3px solid #000;
+    width: 6vw;
+    height: 6vw; 
 }
 
 .dropbtn:hover, .dropbtn:focus {
-    background-color: #fdfd96;
+    background-color: #F77F00;
 }
 
 .dropMenu {
-    position: relative;
+    position: absolute;
     display: inline-block;
+    float: right;
+    top: 20px;
+    right: 20px;
 }
 
 .dropContent {
     display: none;
     position: absolute;
+    float: left;
+    right: 30px;    
     background-color: #f9f9f9;
     width:300px;
-    overflow: auto;
+    overflow: none;
     border:4px solid #000;
 }
 
@@ -70,14 +97,6 @@ body, html{
 .show {display:block;}
 
 
-.mainGan {
-    height:100%;
-    float:right;
-    margin-top: 50px;
-    margin-right: 40px;
-    border-radius: 50px;
-    border: 4px solid #000;
-}
 
 
 /*Flex Container */
@@ -92,72 +111,40 @@ body, html{
     justify-content: space-between;
     position: relative;
     top:10vw;
+
 }
 
-/*Rename items below once I have the shapes I want*/
 
-.item {
+.post {
     position: relative;
     overflow: hidden;
-    height: 12vw;
-    flex: 1 0 40%;
+    height: 20vw;
+    flex: 1 0 20%;
     border-width: 0.5vw 1vw;
     background: #fff;
     padding: 1vw;
     margin:0.5vw;
-    border-radius: 20px;
+    border:8px solid #000;
 }
 
-.item2 {
 
-    position: relative;
-    overflow: hidden;
-    height: 12vw;
-    flex: 2 0 10%;
-    border-width: 0.5vw 1vw;
-    border-radius: 50px;
-    background: #fff;
-    padding: 1vw;
-    margin:0.5vw;
-}
-
-.item3 {
-
-    position: relative;
-    overflow: hidden;
-    height: 12vw;
-    flex: 3 0 20%;
-    border-width: 0.5vw 1vw;
-    border-radius: 100px;
-    background: #fff;
-    padding: 1vw;
-    margin:0.5vw;
-}
-
-.item4 {
-
-    position: relative;
-    overflow: hidden;
-    height: 12vw;
-    flex: 4 0 10%;
-    border-width: 0.5vw 1vw;
-    border-radius: 100px;
-    background: #fff;
-    padding: 1vw;
-    margin:0.5vw;
-}
-
+/* @ media queries */
 
 @media screen and (max-width: 1000px) {
-    .item {
+    .post {
         height: 30vw;
         -webkit-flex: 1 0 33.33%;
         flex: 1 0 33.33%;
+
+    }
+
+    .name-drop-shadow {
+        font-size: 5vw;
     }
 }
 
 @media screen and (max-width: 590px) {
-    .item {
+    .post {
         height: 90vw;
         -webkit-flex: 1 0 100%;
         flex: 1 0 100%;
@@ -167,7 +154,13 @@ body, html{
 
     .article-container {
         margin: 20vw 5vw 10vw 0vw;
-        margin
+    }
+
+    .name-drop-shadow {
+        font-size: 8vw;
+        position: absolute;
+        top:50px;
+        left: 20px;
     }
 }
 
