--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,16 @@
-body, html{
+
+@import url('https://fonts.googleapis.com/css?family=Homemade+Apple');
+@import "compass/css3";
+
+
+
+ html, body{
     padding: 0;
     margin:0;
     height: 100%;
     width: 100%;
-    background-color: #FFCF99;
+    background-color: #fff;
+    font-size: 100%;
 
     
 }
@@ -14,12 +21,12 @@ body, html{
     position: relative;   
     float: right;   
     top: 20px;
-    right:120px;
+    right:50px;
     margin: 0;
-    font-size:5vw;
-    font-family: 'Montserrat', sans-serif;   
+    font-size:3em;
+    font-family: 'Homemade Apple', cursive;  
     text-align:center;   
-    letter-spacing: -1px;   
+    letter-spacing: 5px;   
     color:#fff;   
     text-shadow: 
     /*  shadow around the text    */     
@@ -40,137 +47,53 @@ body, html{
   z-index: 9999;
   width: 100%;
   height: 100px;
-  background-color: #FFCF99;
+  background-color: #fff;
 
 }
 
-/* Dropdown Button - circle */
-.dropbtn {
-    
-    background-color: #B80C09;
-    color: #000;
-    cursor: pointer;
-    border-radius: 50%;
-    border: 3px solid #000;
-    width: 6vw;
-    height: 6vw; 
+/* Flex Container */
+
+.flex-container {
+  padding: 150px 20px 0px 20px;
+  margin: 0;
+  list-style: none;
+  
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  
+  -webkit-flex-flow: row wrap;
+  justify-content: space-around;
 }
 
-.dropbtn:hover, .dropbtn:focus {
-    background-color: #F77F00;
-}
-
-.dropMenu {
-    position: absolute;
-    display: inline-block;
-    float: right;
-    top: 20px;
-    right: 20px;
-}
-
-.dropContent {
-    display: none;
-    position: absolute;
-    float: left;
-    right: 30px;    
-    background-color: #f9f9f9;
-    width:300px;
-    overflow: none;
-    border:4px solid #000;
-}
-
-.dropContent a {
-    color: black;
-    background-color: #cec1e7;
-    border:4px solid #000;
-    padding: 10px;
-    margin:10px;
-    text-decoration: none;
-    display: block;
-    font-family: Arial;
-    font-size: 25px;
-    text-align: center;
-}
-
-.dropContent a:hover {background-color: #f1f1f1}
-
-.show {display:block;}
-
-
-
-
-/*Flex Container */
-
-.article-container {
-    display: flex;
-    display: -webkit-box;
-    display: -moz-box;
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    flex-flow:row wrap;
-    justify-content: space-between;
-    position: relative;
-    top:10vw;
+.flex-item {
+  background: #FF9505;
+  width: 300px;
+  height: 300px;
+  margin-top: 10px;
+  line-height: 150px;
+  color: white;
+  font-weight: bold;
+  font-size: 3em;
+  text-align: center;
 
 }
 
-
-.post {
-    position: relative;
-    overflow: hidden;
-    height: 20vw;
-    flex: 1 0 20%;
-    border-width: 0.5vw 1vw;
-    background: #fff;
-    padding: 1vw;
-    margin:0.5vw;
-    border:8px solid #000;
-}
-
-
-/* @ media queries */
-
-@media screen and (max-width: 1000px) {
-    .post {
-        height: 30vw;
-        -webkit-flex: 1 0 33.33%;
-        flex: 1 0 33.33%;
-
-    }
-
-    .name-drop-shadow {
-        font-size: 5vw;
-    }
-}
 
 @media screen and (max-width: 590px) {
-    .post {
-        height: 90vw;
+    .flex-item {
         -webkit-flex: 1 0 100%;
         flex: 1 0 100%;
-        overflow: none;
-
-    }
-
-    .article-container {
-        margin: 20vw 5vw 10vw 0vw;
     }
 
     .name-drop-shadow {
-        font-size: 8vw;
-        position: absolute;
-        top:50px;
-        left: 20px;
+        font-size: 1.7em;
+    }
+
+    .flex-container {
+        padding-top:100px;
     }
 }
-
-
-
-
-
-
-
-
-
-
 
